bk_ida/gccida/g1/gen_subroutine_type_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11456:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11463:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11466:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11477:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11505:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11513:13: error: expected ';' after expression
rtx = ( rtx)val_addr[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11526:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtx[1] != 10 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11527:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11546:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/dwarf2out.c:11562:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4441, "AT_unsigned"); 
                             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subroutine_type_die/src/obj/dwarf2out.o] Error 1
